--- a/projects/asw-890-kubernetes/a-hello-kube-dockerhub/build.gradle
+++ b/projects/asw-890-kubernetes/a-hello-kube-dockerhub/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'asw.springboot'
+group = 'asw.hello'
 // version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
