Aggiornato progetto asw-825-spring-boot

--- a/projects/asw-825-spring-boot/g-restaurant-actuator/build.gradle
+++ b/projects/asw-825-spring-boot/g-restaurant-actuator/build.gradle
@@ -11,12 +11,29 @@ java {
 	sourceCompatibility = JavaVersion.VERSION_17
 }
 
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
+}
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.hsqldb:hsqldb'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	compileOnly 'org.springframework.boot:spring-boot-starter-aop'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test' 
 	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 }
@@ -24,4 +41,3 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
