--- a/projects/asw-825-spring-boot/e-restaurant-with-menu/build.gradle
+++ b/projects/asw-825-spring-boot/e-restaurant-with-menu/build.gradle
@@ -1,12 +1,15 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.4'
-	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
-	id 'java'
+  id 'java'
+  id 'org.springframework.boot' version '3.1.4'
+  id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'asw.springboot'
 // version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+}
 
 configurations {
   compileOnly {
@@ -30,6 +33,7 @@ dependencies {
 	compileOnly 'org.springframework.boot:spring-boot-starter-aop'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test' 
+	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
 }
 
 tasks.named('test') {
