--- a/projects/asw-890-kubernetes/a-hello-kube-dockerhub/build.gradle
+++ b/projects/asw-890-kubernetes/a-hello-kube-dockerhub/build.gradle
@@ -1,12 +1,15 @@
 plugins {
-	id 'org.springframework.boot' version '3.1.3'
+	id 'org.springframework.boot' version '3.1.4'
 	id 'io.spring.dependency-management' version '1.1.3'
 	id 'java'
 }
 
 group = 'asw.hello'
 // version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+	sourceCompatibility = JavaVersion.VERSION_17
+}
 
 repositories {
 	mavenCentral()
