Aggiornato progetto asw-825-spring-boot

--- a/projects/asw-825-spring-boot/f-restaurant-postgresql/docker-compose.yml
+++ b/projects/asw-825-spring-boot/f-restaurant-postgresql/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   postgres:
-    image: postgres
+    image: docker.io/postgres:latest
     volumes:
       - "$PWD/postgres:/docker-entrypoint-initdb.d"
     ports:
