--- a/projects/asw-870-strumenti-ambienti-virtuali/b-apache-puppet/Vagrantfile
+++ b/projects/asw-870-strumenti-ambienti-virtuali/b-apache-puppet/Vagrantfile
@@ -1,8 +1,9 @@
-Encoding.default_internal = Encoding.find('Windows-1250')
+Encoding.default_external = Encoding.find('Windows-1250')
+Encoding.default_internal = Encoding.find('Windows-1250') 
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "bento/ubuntu-20.04"
+  config.vm.box = "bento/ubuntu-22.04"
   config.vm.hostname = "web"
 
   config.vm.network "private_network", ip: "10.11.1.192", virtualbox__intnet: true
