--- a/projects/asw-870-strumenti-ambienti-virtuali/c-apache-puppet-modules/Vagrantfile
+++ b/projects/asw-870-strumenti-ambienti-virtuali/c-apache-puppet-modules/Vagrantfile
@@ -1,16 +1,18 @@
-Encoding.default_internal = Encoding.find('Windows-1250')
+Encoding.default_external = Encoding.find('Windows-1250')
+Encoding.default_internal = Encoding.find('Windows-1250') 
 
 Vagrant.configure("2") do |config|
 
-  config.vm.box = "bento/ubuntu-20.04"
+  config.vm.box = "bento/ubuntu-22.04"
   config.vm.hostname = "web"
 
   config.vm.network "private_network", ip: "10.11.1.193", virtualbox__intnet: true
   config.vm.network "forwarded_port", guest: 80, host: 8083
 
+  # Install Puppet Agent 
   config.vm.provision :shell, path: "install-puppet.sh"
 
-  # Install Puppet Agent 
+  # Download Puppet modules 
   config.vm.provision :shell, path: "download-apache-puppet-modules.sh"
 
   # Provision with Puppet 
