Aggiornato progetto asw-850-spring-cloud

--- a/projects/asw-850-spring-cloud/i-sentence-apigateway/api-gateway/src/main/resources/application.yml
+++ b/projects/asw-850-spring-cloud/i-sentence-apigateway/api-gateway/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: sentenceCircuitBreaker 
             fallbackUri: forward:/fallback/sentence
       - id: subject_route
         uri: lb://subject
@@ -45,7 +45,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: subjectCircuitBreaker 
             fallbackUri: forward:/fallback/subject
       - id: verb_route
         uri: lb://verb
@@ -55,7 +55,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: verbCircuitBreaker 
             fallbackUri: forward:/fallback/verb
       - id: object_route
         uri: lb://object
@@ -65,7 +65,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: objectCircuitBreaker 
             fallbackUri: forward:/fallback/object
       - id: index_route
         uri: lb://sentence
