--- a/projects/asw-850-spring-cloud/j-sentence-apigateway-async/sentence-service/src/main/resources/application.yml
+++ b/projects/asw-850-spring-cloud/j-sentence-apigateway-async/sentence-service/src/main/resources/application.yml
@@ -23,7 +23,6 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
 #  port: 8080
 
-
 # ATTENZIONE: 
 # QUESTA CONFIGURAZIONE E' PENSATA SOLO PER EFFETTUARE DEGLI ESPERIMENTI
 # MA NON VA USATA IN PRODUZIONE
@@ -32,7 +31,25 @@ resilience4j:
   circuitbreaker:
     circuit-breaker-aspect-order: 1
     instances:
-      wordClientCircuitBreaker:
+      subjectClientCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+      verbClientCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+      objectClientCircuitBreaker:
         wait-duration-in-open-state: 15s
         permitted-number-of-calls-in-half-open-state: 10
         sliding-window-type: count-based
