--- a/projects/asw-850-spring-cloud/i-sentence-apigateway/api-gateway/src/main/resources/application.yml
+++ b/projects/asw-850-spring-cloud/i-sentence-apigateway/api-gateway/src/main/resources/application.yml
@@ -82,6 +82,52 @@ management:
   endpoint.gateway.enabled: true 
   endpoints.web.exposure.include: info,health,gateway,beans
 
+# ATTENZIONE: 
+# QUESTA CONFIGURAZIONE E' PENSATA SOLO PER EFFETTUARE DEGLI ESPERIMENTI
+# MA NON VA USATA IN PRODUZIONE
+resilience4j:
+  # see https://resilience4j.readme.io/docs/circuitbreaker
+  circuitbreaker:
+    circuit-breaker-aspect-order: 1
+    instances:
+      sentenceCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+      subjectCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+      verbCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+      objectCircuitBreaker:
+        wait-duration-in-open-state: 15s
+        permitted-number-of-calls-in-half-open-state: 10
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold: 5s
+        slow-call-rate-threshold: 50 
+        failure-rate-threshold: 30
+  # see https://resilience4j.readme.io/docs/retry 
+
 logging:
   level:
     root: INFO
