--- a/projects/asw-890-kubernetes/l-sentence-kube-dockerhub/api-gateway/src/main/resources/application.yml
+++ b/projects/asw-890-kubernetes/l-sentence-kube-dockerhub/api-gateway/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
   application: 
     name: apigateway
   cloud:
+    consul:
 #    consul: 
 #      host: consul
 #      port: 8500
@@ -26,6 +27,7 @@ spring:
           # sulla base dei servizi registrati nel servizio di service discover (default=false) 
           # enabled: true       
           enabled: false
+      # il time limiter del circuit breaker è settato a 500ms in Resilience4JConfig
       routes:
       - id: sentence_route
         uri: lb://sentence
@@ -35,7 +37,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: sentenceCircuitBreaker 
             fallbackUri: forward:/fallback/sentence
       - id: subject_route
         uri: lb://subject
@@ -45,7 +47,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: subjectCircuitBreaker 
             fallbackUri: forward:/fallback/subject
       - id: verb_route
         uri: lb://verb
@@ -55,7 +57,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: verbCircuitBreaker 
             fallbackUri: forward:/fallback/verb
       - id: object_route
         uri: lb://object
@@ -65,7 +67,7 @@ spring:
         - SetPath=/
         - name: CircuitBreaker
           args: 
-            name: defaultCircuitBreaker 
+            name: objectCircuitBreaker 
             fallbackUri: forward:/fallback/object
       - id: index_route
         uri: lb://sentence
@@ -81,6 +83,56 @@ server:
 management: 
   endpoint.gateway.enabled: true 
   endpoints.web.exposure.include: info,health,gateway,beans
+
+# ATTENZIONE: 
+# QUESTA CONFIGURAZIONE E' PENSATA SOLO PER EFFETTUARE DEGLI ESPERIMENTI
+# MA NON VA USATA IN PRODUZIONE
+resilience4j:
+  # see https://resilience4j.readme.io/docs/circuitbreaker
+  circuitbreaker:
+    circuit-breaker-aspect-order: 1
+    instances:
+      sentenceCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 3s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+      subjectCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+      verbCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+      objectCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+  # see https://resilience4j.readme.io/docs/retry 
+
+asw: 
+  # timeout per il circuit breaker, usato in Resilience4JConfig (il default di R4J è 1000 ms)
+  resilience4j.timelimiter.timeoutduration: 500 
 
 logging:
   level:
