--- a/projects/asw-890-kubernetes/l-sentence-kube-dockerhub/sentence-service/src/main/resources/application.yml
+++ b/projects/asw-890-kubernetes/l-sentence-kube-dockerhub/sentence-service/src/main/resources/application.yml
@@ -23,7 +23,6 @@ server:
 #  port: ${PORT:${SERVER_PORT:0}}
   port: 8080
 
-
 # ATTENZIONE: 
 # QUESTA CONFIGURAZIONE E' PENSATA SOLO PER EFFETTUARE DEGLI ESPERIMENTI
 # MA NON VA USATA IN PRODUZIONE
@@ -32,22 +31,40 @@ resilience4j:
   circuitbreaker:
     circuit-breaker-aspect-order: 1
     instances:
-      wordClientCircuitBreaker:
-        wait-duration-in-open-state: 15s
-        permitted-number-of-calls-in-half-open-state: 10
+      subjectClientCircuitBreaker:
         sliding-window-type: count-based
         sliding-window-size: 20
         minimum-number-of-calls: 10
-        slow-call-duration-threshold: 5s
-        slow-call-rate-threshold: 50 
         failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+      verbClientCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
+      objectClientCircuitBreaker:
+        sliding-window-type: count-based
+        sliding-window-size: 20
+        minimum-number-of-calls: 10
+        failure-rate-threshold: 30
+        slow-call-rate-threshold: 50 
+        slow-call-duration-threshold: 2s
+        permitted-number-of-calls-in-half-open-state: 10
+        wait-duration-in-open-state: 5s
   # see https://resilience4j.readme.io/docs/retry 
   retry:
     # 2>1: retry ha priorità maggiore di circuit breaker  
     retry-aspect-order: 2
     instances:
       wordClientRetry:
-        max-attempts: 3
+        max-attempts: 2
         wait-duration: 500ms
         # eccezioni che causano un retry 
         retry-exceptions:
