--- a/asw-order-manager/product-service/src/main/resources/application.yml
+++ b/asw-order-manager/product-service/src/main/resources/application.yml
@@ -16,7 +16,8 @@ spring:
         # dopo quanto tempo consul deve smettere di restituire servizi che non rispondono all'health check? 
         healthCheckCriticalTimeout: 45s
         # consul deve restituire solo servizi che passano l'health check (default=false) 
-        queryPassing: true 
+        queryPassing: true
+        prefer-ip-address: true
     loadbalancer: 
       ribbon.enabled: false 
       
