--- a/asw-order-manager/kubernetes/api-gateway-deployment.yaml
+++ b/asw-order-manager/kubernetes/api-gateway-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         io.kompose.service: api-gateway
     spec:
       containers:
-        - image: local/api-gateway
+        - image: localhost/api-gateway
           name: api-gateway
           ports:
             - containerPort: 8080
