--- a/asw-order-manager/kubernetes/order-service-deployment.yaml
+++ b/asw-order-manager/kubernetes/order-service-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         io.kompose.service: order-service
     spec:
       containers:
-        - image: local/order-service
+        - image: localhost/order-service
           name: order-service
           resources: {}
       restartPolicy: Always
