--- a/asw-order-manager/order-service/build.gradle
+++ b/asw-order-manager/order-service/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.hsqldb:hsqldb'
+	implementation 'org.postgresql:postgresql'
 
 	compileOnly 'org.projectlombok:lombok' 
 	annotationProcessor 'org.projectlombok:lombok'
